fixed: Fixed bug in PlayerRankingService